--- a/starter/client/.env
+++ b/starter/client/.env
@@ -1,3 +1,6 @@
-REACT_APP_AUTH0_DOMAIN=...
-REACT_APP_AUTH0_CLIENT_ID=...
-REACT_APP_API_ENDPOINT=...
+# .env
+REACT_APP_API_ID=07lhqph7gg
+REACT_APP_API_ENDPOINT=https://07lhqph7gg.execute-api.us-east-1.amazonaws.com/dev
+REACT_APP_AUTH0_DOMAIN=dev-3ph6j4jyd3h82a4a.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=1gJU3lfettgP0NqGoo3WReVctoxZQtpX
+REACT_APP_AUTH0_CALLBACK_URL=http://localhost:3000/callback
