--- a/starter/backend/serverless.yml
+++ b/starter/backend/serverless.yml
@@ -3,14 +3,36 @@ service: serverless-todo-app
 plugins:
   - serverless-iam-roles-per-function
 
-frameworkVersion: '3'
+frameworkVersion: "4"
 
 provider:
   name: aws
-  runtime: nodejs14.x
+  runtime: nodejs18.x
+  layers:
+    - arn:aws:lambda:us-east-1:455933038001:layer:aws-sdk:1
+  region: ${opt:region, 'us-east-1'}
+  environment:
+    TODOS_TABLE: todostable-taingo30 
+    ATTACHMENTS_BUCKET: todoattachmentsbucket-taingo30 
+    SIGNED_URL_EXPIRATION: 300 
+    AUTH0_DOMAIN: dev-3ph6j4jyd3h82a4a.us.auth0.com
+
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource: "arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}"
+    - Effect: Allow
+      Action:
+        - s3:PutObject
+      Resource: "arn:aws:s3:::${self:provider.environment.ATTACHMENTS_BUCKET}/*"
 
 functions:
-
   Auth:
     handler: src/lambda/auth/auth0Authorizer.handler
 
@@ -21,7 +43,8 @@ functions:
       - http:
           method: get
           path: todos
-
+          cors: true
+          
   # TODO: Configure this function
   CreateTodo:
     handler: src/lambda/http/createTodo.handler
@@ -29,7 +52,8 @@ functions:
       - http:
           method: post
           path: todos
-
+          cors: true
+          
   # TODO: Configure this function
   UpdateTodo:
     handler: src/lambda/http/updateTodo.handler
@@ -37,6 +61,8 @@ functions:
       - http:
           method: patch
           path: todos/{todoId}
+          cors: true
+          
 
   # TODO: Configure this function
   DeleteTodo:
@@ -45,6 +71,8 @@ functions:
       - http:
           method: delete
           path: todos/{todoId}
+          cors: true
+          
 
   # TODO: Configure this function
   GenerateUploadUrl:
@@ -53,7 +81,47 @@ functions:
       - http:
           method: post
           path: todos/{todoId}/attachment
+          cors: true
+          
 
 resources:
   Resources:
     # TODO: Add any necessary AWS resources
+    TodosTable:
+      Type: "AWS::DynamoDB::Table"
+      Properties:
+        TableName: ${self:provider.environment.TODOS_TABLE}
+        AttributeDefinitions:
+          - AttributeName: "userId"
+            AttributeType: "S"
+          - AttributeName: "todoId"
+            AttributeType: "S"
+        KeySchema:
+          - AttributeName: "userId"
+            KeyType: "HASH"
+          - AttributeName: "todoId"
+            KeyType: "RANGE"
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
+
+    AttachmentsBucket:
+      Type: "AWS::S3::Bucket"
+      Properties:
+        BucketName: ${self:provider.environment.ATTACHMENTS_BUCKET}
+        CorsConfiguration:
+          CorsRules:
+            - AllowedOrigins:
+                - "*"
+              AllowedHeaders:
+                - "*"
+              AllowedMethods:
+                - GET
+                - PUT
+                - POST
+                - DELETE
+              MaxAge: 3000
+
+custom:
+  todosTable: TodosTable
+  attachmentsBucket: TodoAttachmentsBucket
