--- a/starter/backend/package.json
+++ b/starter/backend/package.json
@@ -19,6 +19,7 @@
     "@middy/http-cors": "^3.6.2",
     "@middy/http-error-handler": "^3.6.2",
     "aws-sdk": "^2.1691.0",
+    "aws-xray-sdk": "^3.10.1",
     "aws-xray-sdk-core": "^3.10.1",
     "axios": "^1.7.7",
     "http-errors": "^2.0.0",
