--- a/starter/backend/serverless.yml
+++ b/starter/backend/serverless.yml
@@ -8,6 +8,9 @@ frameworkVersion: "4"
 provider:
   name: aws
   runtime: nodejs18.x
+  tracing:
+    lambda: true
+    apiGateway: true
   layers:
     - arn:aws:lambda:us-east-1:455933038001:layer:aws-sdk:1
   region: ${opt:region, 'us-east-1'}
@@ -30,6 +33,7 @@ provider:
     - Effect: Allow
       Action:
         - s3:PutObject
+        - s3:GetObject
       Resource: "arn:aws:s3:::${self:provider.environment.ATTACHMENTS_BUCKET}/*"
 
 functions:
