--- a/starter/backend-v2/serverless.yml
+++ b/starter/backend-v2/serverless.yml
@@ -20,30 +20,19 @@ provider:
     SIGNED_URL_EXPIRATION: 300 
     AUTH0_DOMAIN: dev-3ph6j4j3h82a4a.us.auth0.com
 
-  iamRoleStatements:
-    - Effect: Allow
-      Action:
-        - dynamodb:Query
-        - dynamodb:Scan
-        - dynamodb:GetItem
-        - dynamodb:PutItem
-        - dynamodb:UpdateItem
-        - dynamodb:DeleteItem
-      Resource: "arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}"
-    - Effect: Allow
-      Action:
-        - s3:PutObject
-        - s3:GetObject
-      Resource: "arn:aws:s3:::${self:provider.environment.ATTACHMENTS_BUCKET}/*"
-
 functions:
   Auth:
-    handler: src/auth/auth0Authorizer.handler
+    handler: lambda/auth/auth0Authorizer.handler
     events:
       - http:
           method: post
           path: auth
           cors: true
+    iamRoleStatements:
+      - Effect: "Allow"
+        Action:
+          - "execute-api:Invoke"
+        Resource: "*"
 
   GetTodos:
     handler: lambda/http/getTodos.handler
